--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 absl-py==2.1.0
 asttokens==2.4.1
 astunparse==1.6.3
+bing-image-downloader==1.1.2
 cachetools==5.3.2
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -11,9 +12,13 @@ cycler==0.12.1
 debugpy==1.8.1
 decorator==5.1.1
 executing==2.0.1
+filelock==3.13.1
 flatbuffers==23.5.26
 fonttools==4.49.0
+fsspec==2024.2.0
 gast==0.5.4
+gitdb==4.0.11
+GitPython==3.1.42
 google-auth==2.28.1
 google-auth-oauthlib==1.2.0
 google-pasta==0.2.0
@@ -23,6 +28,7 @@ idna==3.6
 ipykernel==6.29.2
 ipython==8.22.1
 jedi==0.19.1
+Jinja2==3.1.3
 jupyter_client==8.6.0
 jupyter_core==5.7.1
 keras==2.15.0
@@ -33,12 +39,15 @@ MarkupSafe==2.1.5
 matplotlib==3.8.3
 matplotlib-inline==0.1.6
 ml-dtypes==0.2.0
+mpmath==1.3.0
 nest-asyncio==1.6.0
+networkx==3.2.1
 numpy==1.26.4
 oauthlib==3.2.2
 opencv-python==4.9.0.80
 opt-einsum==3.3.0
 packaging==23.2
+pandas==2.2.1
 parso==0.8.3
 pillow==10.2.0
 platformdirs==4.2.0
@@ -46,18 +55,25 @@ prompt-toolkit==3.0.43
 protobuf==4.25.3
 psutil==5.9.8
 pure-eval==0.2.2
+py-cpuinfo==9.0.0
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 Pygments==2.17.2
 pyparsing==3.1.1
 python-dateutil==2.8.2
+pytz==2024.1
 pywin32==306
+PyYAML==6.0.1
 pyzmq==25.1.2
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
+scipy==1.12.0
+seaborn==0.13.2
 six==1.16.0
+smmap==5.0.1
 stack-data==0.6.3
+sympy==1.12
 tensorboard==2.15.2
 tensorboard-data-server==0.7.2
 tensorflow==2.15.0
@@ -65,9 +81,16 @@ tensorflow-estimator==2.15.0
 tensorflow-intel==2.15.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
+thop==0.1.1.post2209072238
+torch==2.2.1
+torchaudio==2.2.1
+torchvision==0.17.1
 tornado==6.4
+tqdm==4.66.2
 traitlets==5.14.1
 typing_extensions==4.9.0
+tzdata==2024.1
+ultralytics==8.1.18
 urllib3==2.2.1
 wcwidth==0.2.13
 Werkzeug==3.0.1
